legacy/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    k8s-app: fluentd-logging
    version: v1
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-logging
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-logging
        version: v1
    spec:
      serviceAccountName: fluentd
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1-debian-opensearch
          securityContext:
            runAsUser: 0
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: config-volume
              mountPath: /fluentd/etc/fluent.conf
              subPath: fluent.conf
            - name: template-volume
              mountPath: /fluentd/etc/index-template.json
              subPath: index-template.json
            - name: varlog
              mountPath: /var/log
            - name: podslog
              mountPath: /var/log/pods
              readOnly: true
            - name: containerslog
              mountPath: /var/log/containers
              readOnly: true
            - name: buffer
              mountPath: /var/log/fluentd-buffer
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config-volume
          configMap:
            name: fluentd-config
        - name: template-volume
          configMap:
            name: fluentd-config
        - name: varlog
          hostPath: { path: /var/log }
        - name: podslog
          hostPath: { path: /var/log/pods }
        - name: containerslog
          hostPath: { path: /var/log/containers }
        - name: buffer
          emptyDir: {}
