legacy/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    external-dns.alpha.kubernetes.io/hostname: grafana.370445361629.realhandsonlabs.net
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.370445361629.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kube-prometheus-stack-grafana
            port:
              name: http-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    external-dns.alpha.kubernetes.io/hostname: prometheus.370445361629.realhandsonlabs.net
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.370445361629.realhandsonlabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kube-prometheus-stack-prometheus
            port:
              name: http-web
